some dimens are added to dimens.xml

--- a/app/src/main/res/layout/activity_location_screen.xml
+++ b/app/src/main/res/layout/activity_location_screen.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="22dp"
+            android:layout_marginTop="@dimen/margin_medium_4_n"
             android:fontFamily="@font/dm_sans"
             android:text="@string/lbl_pick_region_location_screen"
             android:textColor="@color/colorAccent"
@@ -26,10 +26,10 @@
 
         <FrameLayout
             android:id="@+id/flSearchBar"
-            android:layout_width="300dp"
+            android:layout_width="@dimen/width_300dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvPickRegionLabel"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="@dimen/margin_15dp"
             android:layout_marginTop="@dimen/margin_xlarge"
             android:background="@drawable/et_search_location_background">
 
@@ -38,15 +38,15 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/flag_transparent"
                 android:drawableStart="@drawable/ic_baseline_search_green_18dp"
-                android:drawablePadding="12dp"
+                android:drawablePadding="@dimen/margin_card_medium_2"
                 android:fontFamily="@font/inter"
                 android:gravity="center_vertical|start"
                 android:hint="@string/lbl_search_your_location_location_screen"
                 android:inputType="text"
                 android:maxLines="1"
-                android:padding="16dp"
+                android:padding="@dimen/margin_medium_2"
                 android:scrollbarAlwaysDrawHorizontalTrack="true"
-                android:scrollbarSize="1dp"
+                android:scrollbarSize="@dimen/margin_1dp"
                 android:scrollbarStyle="insideOverlay"
                 android:scrollbars="horizontal"
                 android:textColor="#9E9E9E"
@@ -57,17 +57,17 @@
 
         <FrameLayout
             android:id="@+id/btnLocation"
-            android:layout_width="50dp"
+            android:layout_width="@dimen/width_50dp"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/flSearchBar"
             android:layout_alignBottom="@+id/flSearchBar"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="@dimen/margin_15dp"
             android:layout_toEndOf="@+id/flSearchBar"
             android:background="@drawable/btn_location_background">
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="16dp"
-                android:layout_height="16dp"
+                android:layout_width="@dimen/width_16dp"
+                android:layout_height="@dimen/height_16dp"
                 android:layout_gravity="center"
                 android:elevation="@dimen/margin_medium"
                 android:scaleType="centerCrop"
@@ -77,11 +77,11 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivBuildings"
-            android:layout_width="91dp"
-            android:layout_height="52dp"
+            android:layout_width="@dimen/width_91dp"
+            android:layout_height="@dimen/height_52dp"
             android:layout_below="@+id/btnLocation"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="@dimen/margin_30dp"
             android:elevation="@dimen/margin_medium"
             android:scaleType="fitXY"
             app:srcCompat="@drawable/buildings" />
@@ -89,15 +89,16 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvCitiesLabel"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="@dimen/height_40dp"
             android:layout_below="@+id/ivBuildings"
             android:background="#3B3B3B"
             android:fontFamily="@font/inter"
             android:gravity="center_vertical"
-            android:paddingStart="22dp"
-            android:text="Cities"
+            android:paddingStart="@dimen/margin_medium_4_n"
+            android:text="@string/cities_lbl"
             android:textColor="#F2F2F2"
-            android:textSize="15sp" />
+            android:textSize="@dimen/text_15sp"
+            tools:ignore="RtlSymmetry" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvCitiesLocation"
