--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,10 +22,10 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNvgViewHome"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="@dimen/height_70dp"
         android:background="@color/colorPrimary"
         app:itemBackground="@android:color/transparent"
-        app:itemIconSize="30dp"
+        app:itemIconSize="@dimen/margin_30dp"
         app:itemIconTint="@drawable/bottom_navigation_icon_color"
         app:itemPaddingBottom="@dimen/margin_10dp"
         app:itemRippleColor="@color/colorAccent"
