--- a/app/src/main/res/layout/activity_otp_screen.xml
+++ b/app/src/main/res/layout/activity_otp_screen.xml
@@ -10,15 +10,15 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="49dp"
+        android:layout_marginBottom="@dimen/margin_49dp"
         android:background="@color/colorPrimary">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/btnOtpScreenBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="22dp"
-            android:layout_marginTop="34dp"
+            android:layout_marginStart="@dimen/margin_medium_4_n"
+            android:layout_marginTop="@dimen/margin_34dp"
             android:backgroundTint="@color/colorPrimaryDark"
             app:srcCompat="@drawable/ic_baseline_chevron_left_grey_24dp" />
 
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/colOtpScreenLogo"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="@dimen/margin_80dp"
             android:fontFamily="@font/dm_sans"
             android:text="@string/lbl_we_ve_sent_otp_code_otp_screen"
             android:textColor="@color/white"
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvSentOtpCodeLabel"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/margin_10dp"
             android:fontFamily="@font/dm_sans"
             android:gravity="center"
             android:text="@string/lbl_otp_details_otp_screen"
@@ -77,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvSentOtpDetailsLabel"
-            android:layout_marginStart="34dp"
+            android:layout_marginStart="@dimen/margin_34dp"
             android:layout_marginTop="@dimen/margin_medium_3_2x"
             android:fontFamily="@font/dm_sans"
             android:gravity="center"
@@ -92,26 +92,26 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvEnterOtpCodeLabel"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:cursorVisible="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:cursorVisible="true"
             android:fontFamily="@font/dm_sans"
             android:inputType="number"
             android:itemBackground="@color/white"
             android:textColor="#4A4A4B"
-            android:textSize="14sp"
+            android:textSize="@dimen/text_regular"
             android:textStyle="bold"
             app:cursorColor="#4A4A4B"
-            app:cursorWidth="2dp"
+            app:cursorWidth="@dimen/margin_small_smaller"
             app:hideLineWhenFilled="true"
             app:itemCount="6"
-            app:itemHeight="50dp"
-            app:itemRadius="4dp"
-            app:itemSpacing="8dp"
-            app:itemWidth="50dp"
+            app:itemHeight="@dimen/margin_50dp"
+            app:itemRadius="@dimen/margin_small"
+            app:itemSpacing="@dimen/margin_medium"
+            app:itemWidth="@dimen/margin_50dp"
             app:lineColor="@color/white"
-            app:lineWidth="1dp"
+            app:lineWidth="@dimen/margin_1dp"
             app:viewType="rectangle" />
 
         <LinearLayout
@@ -120,7 +120,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/otpPinCode"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="@dimen/margin_40dp"
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -143,16 +143,16 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnConfirmOtp"
-            android:layout_width="348dp"
+            android:layout_width="@dimen/width_348dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvResendCodeLabel"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="@dimen/margin_40dp"
             android:backgroundTint="@color/colorAccent"
             android:fontFamily="@font/inter"
             android:gravity="center"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
+            android:paddingTop="@dimen/margin_15dp"
+            android:paddingBottom="@dimen/margin_15dp"
             android:text="@string/lbl_confirm_otp_otp_screen"
             android:textAllCaps="false"
             android:textColor="@color/black"
@@ -164,7 +164,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/btnConfirmOtp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="94dp"
+            android:layout_marginTop="@dimen/margin_94dp"
             android:fontFamily="@font/dm_sans"
             android:gravity="center"
             android:text="@string/by_clicking_login_screen"
