--- a/app/src/main/res/layout/fragment_movies_home.xml
+++ b/app/src/main/res/layout/fragment_movies_home.xml
@@ -46,17 +46,17 @@
                 android:elevation="@dimen/margin_medium"
                 app:dotsClickable="true"
                 app:dotsColor="@color/colorAccent"
-                app:dotsCornerRadius="4dp"
-                app:dotsSize="8dp"
-                app:dotsSpacing="8dp"
+                app:dotsCornerRadius="@dimen/margin_small"
+                app:dotsSize="@dimen/margin_medium"
+                app:dotsSpacing="@dimen/margin_medium"
                 app:dotsStrokeColor="@color/colorDots"
-                app:dotsStrokeWidth="1dp"
+                app:dotsStrokeWidth="@dimen/margin_1dp"
                 app:stiffness="300" />
 
             <FrameLayout
                 android:id="@+id/flTabLayout"
                 android:layout_width="match_parent"
-                android:layout_height="55dp"
+                android:layout_height="@dimen/width_55dp"
                 android:layout_below="@+id/dotsIndicatorHome"
                 android:layout_marginStart="@dimen/margin_medium_4_n"
                 android:layout_marginTop="@dimen/margin_30dp"
@@ -67,7 +67,7 @@
                     android:id="@+id/tabLayoutMoviesHome"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_margin="8dp"
+                    android:layout_margin="@dimen/margin_medium"
                     android:background="@drawable/tab_layout_movie_home_background"
                     app:tabBackground="@drawable/tab_selected_movie_home_background"
                     app:tabIndicator="@null"
@@ -84,7 +84,7 @@
                 android:layout_height="match_parent"
                 android:layout_below="@+id/flTabLayout"
                 android:layout_marginStart="@dimen/margin_medium_4_n"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="@dimen/margin_30dp"
                 android:layout_marginEnd="@dimen/margin_medium_4_n"
                 android:paddingBottom="17dp" />
 
