--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -151,5 +151,33 @@
     <dimen name="margin_14dp">14dp</dimen>
     <dimen name="width_filter_icon">20dp</dimen>
     <dimen name="height_filter_icon">20dp</dimen>
+    <dimen name="margin_275dp">275dp</dimen>
+    <dimen name="margin_56dp">56dp</dimen>
+    <dimen name="margin_49dp">49dp</dimen>
+    <dimen name="margin_347dp">347dp</dimen>
+    <dimen name="margin_76dp">76dp</dimen>
+    <dimen name="width_country_code">76dp</dimen>
+    <dimen name="width_251dp">251dp</dimen>
+    <dimen name="margin_1dp">1dp</dimen>
+    <dimen name="width_357dp">357dp</dimen>
+    <dimen name="height_51dp">51dp</dimen>
+    <dimen name="width_25dp">25dp</dimen>
+    <dimen name="height_25dp">25dp</dimen>
+    <dimen name="margin_80dp">80dp</dimen>
+    <dimen name="margin_13dp">13dp</dimen>
+    <dimen name="margin_115dp">115dp</dimen>
+    <dimen name="margin_94dp">94dp</dimen>
+    <dimen name="width_300dp">300dp</dimen>
+    <dimen name="width_50dp">50dp</dimen>
+    <dimen name="width_16dp">16dp</dimen>
+    <dimen name="height_16dp">16dp</dimen>
+    <dimen name="width_91dp">91dp</dimen>
+    <dimen name="height_52dp">52dp</dimen>
+    <dimen name="height_40dp">40dp</dimen>
+    <dimen name="text_15sp">15sp</dimen>
+    <dimen name="margin_23dp">23dp</dimen>
+    <dimen name="height_70dp">70dp</dimen>
+    <dimen name="width_348dp">348dp</dimen>
+    <dimen name="width_55dp">55dp</dimen>
 
 </resources>
